--- a/Wordel/Wordel.Android/Wordel.Android.csproj
+++ b/Wordel/Wordel.Android/Wordel.Android.csproj
@@ -4,11 +4,27 @@
         <TargetFramework>net7.0-android</TargetFramework>
         <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
         <Nullable>enable</Nullable>
-        <ApplicationId>com.CompanyName.Wordel</ApplicationId>
+        <ApplicationId>me.caellian.Wordel</ApplicationId>
         <ApplicationVersion>1</ApplicationVersion>
-        <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+        <ApplicationDisplayVersion>1.0.0</ApplicationDisplayVersion>
         <AndroidPackageFormat>apk</AndroidPackageFormat>
         <AndroidEnableProfiledAot>False</AndroidEnableProfiledAot>
+        <PackageId>Wordel.Android</PackageId>
+        <Title>Wordel</Title>
+        <Authors>Tin Švagelj</Authors>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
+      <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
+      <AndroidUseAapt2>true</AndroidUseAapt2>
+      <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
+      <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
+      <MandroidI18n>hr,en</MandroidI18n>
+      <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+      <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,10 +34,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Wordel\Wordel.csproj"/>
+        <ProjectReference Include="..\Wordel\Wordel.csproj" />
     </ItemGroup>
 </Project>
