--- a/Wordel/Wordel.Web/Wordel.Web.csproj
+++ b/Wordel/Wordel.Web/Wordel.Web.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia.Web" Version="$(AvaloniaVersion)"/>
+        <PackageReference Include="Avalonia.Web" Version="11.0.0-preview4"/>
     </ItemGroup>
 
     <ItemGroup>
