--- a/Wordel/Wordel.Android/Properties/AndroidManifest.xml
+++ b/Wordel/Wordel.Android/Properties/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="Wordel" android:icon="@drawable/Icon" />
+
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 </manifest>
