--- a/Wordel/Wordel.Android/Wordel.Android.csproj
+++ b/Wordel/Wordel.Android/Wordel.Android.csproj
@@ -9,22 +9,23 @@
         <ApplicationDisplayVersion>1.0.0</ApplicationDisplayVersion>
         <AndroidPackageFormat>apk</AndroidPackageFormat>
         <AndroidEnableProfiledAot>False</AndroidEnableProfiledAot>
-        <PackageId>Wordel.Android</PackageId>
+        <PackageId>Wordel</PackageId>
         <Title>Wordel</Title>
         <Authors>Tin Švagelj</Authors>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
-      <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
-      <AndroidUseAapt2>true</AndroidUseAapt2>
-      <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+        <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
+        <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
+        <AndroidUseAapt2>true</AndroidUseAapt2>
+        <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+        <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
-      <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
-      <MandroidI18n>hr,en</MandroidI18n>
-      <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
-      <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
+        <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
+        <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
+        <MandroidI18n>hr,en</MandroidI18n>
+        <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+        <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
     </PropertyGroup>
 
     <ItemGroup>
@@ -35,6 +36,7 @@
 
     <ItemGroup>
         <PackageReference Include="Avalonia.Android" Version="$(AvaloniaVersion)" />
+        <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.1" />
     </ItemGroup>
 
     <ItemGroup>
