--- a/Wordel/Directory.Build.props
+++ b/Wordel/Directory.Build.props
@@ -2,5 +2,6 @@
   <PropertyGroup>
     <Nullable>enable</Nullable>
     <AvaloniaVersion>11.0.4</AvaloniaVersion>
+    <SQLitePCLRawVersion>2.1.6</SQLitePCLRawVersion>
   </PropertyGroup>
 </Project>
