--- a/Wordel/Wordel/Wordel.csproj
+++ b/Wordel/Wordel/Wordel.csproj
@@ -19,9 +19,14 @@
         <PackageReference Include="Avalonia.ReactiveUI" Version="$(AvaloniaVersion)" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
-        <PackageReference Include="MessageBox.Avalonia" Version="2.3.1-prev7.0" />
+        <PackageReference Include="MessageBox.Avalonia" Version="3.1.4" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+        <PackageReference Include="SQLitePCLRaw.core" Version="$(SQLitePCLRawVersion)" />
+        <PackageReference Include="SQLitePCLRaw.bundle_green" Version="$(SQLitePCLRawVersion)" />
+        <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="$(SQLitePCLRawVersion)" />
+        <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="$(SQLitePCLRawVersion)" />
     </ItemGroup>
 
     <ItemGroup>
