Add seminar for UPI class
Move some files into Model and cleanup project.

Signed-off-by: Tin Svagelj <tin.svagelj@live.com>

--- a/Wordel/Wordel.Android/Wordel.Android.csproj
+++ b/Wordel/Wordel.Android/Wordel.Android.csproj
@@ -12,6 +12,8 @@
         <PackageId>Wordel.Android</PackageId>
         <Title>Wordel</Title>
         <Authors>Tin Švagelj</Authors>
+        <Product>Wordel</Product>
+        <AssemblyName>Wordel</AssemblyName>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
